--- a/simpleWidgetExmpl.ipynb
+++ b/simpleWidgetExmpl.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-16T10:30:30.222020Z",
-     "start_time": "2020-03-16T10:30:29.333387Z"
+     "end_time": "2020-03-16T10:58:12.200585Z",
+     "start_time": "2020-03-16T10:58:11.306915Z"
     }
    },
    "outputs": [],
@@ -20,8 +20,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-16T10:31:10.496086Z",
-     "start_time": "2020-03-16T10:31:10.492128Z"
+     "end_time": "2020-03-16T10:58:13.489081Z",
+     "start_time": "2020-03-16T10:58:13.484094Z"
     }
    },
    "outputs": [],
@@ -39,15 +39,15 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-16T10:31:25.015409Z",
-     "start_time": "2020-03-16T10:31:24.846831Z"
+     "end_time": "2020-03-16T10:58:14.275980Z",
+     "start_time": "2020-03-16T10:58:14.102441Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c42a43994f8d49d687853a8f2c3974c5",
+       "model_id": "3f5069330c674efdb2e34dc8d30f3b8d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,8 +75,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-16T10:36:40.340190Z",
-     "start_time": "2020-03-16T10:36:40.336170Z"
+     "end_time": "2020-03-16T10:58:24.867678Z",
+     "start_time": "2020-03-16T10:58:24.862690Z"
     }
    },
    "outputs": [],
@@ -91,15 +91,15 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-16T10:36:42.691026Z",
-     "start_time": "2020-03-16T10:36:42.631222Z"
+     "end_time": "2020-03-16T10:58:25.111023Z",
+     "start_time": "2020-03-16T10:58:25.056170Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9b06c3886544c4ab5861cc148de0960",
+       "model_id": "90a691a8e96a44c3bab04e98dbb2ae84",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,11 +133,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-16T09:54:17.575544Z",
-     "start_time": "2020-03-16T09:54:17.570558Z"
+     "end_time": "2020-03-16T10:58:29.202110Z",
+     "start_time": "2020-03-16T10:58:29.199125Z"
     }
    },
    "outputs": [],
@@ -147,11 +147,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-16T09:54:17.737122Z",
-     "start_time": "2020-03-16T09:54:17.734158Z"
+     "end_time": "2020-03-16T10:58:29.404216Z",
+     "start_time": "2020-03-16T10:58:29.399226Z"
     }
    },
    "outputs": [],
@@ -162,19 +162,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-16T09:54:18.231823Z",
-     "start_time": "2020-03-16T09:54:18.211878Z"
+     "end_time": "2020-03-16T10:58:29.818318Z",
+     "start_time": "2020-03-16T10:58:29.791424Z"
     },
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "93d5ebfc5af447d7a34623f32312d887",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "100"
+       "interactive(children=(IntSlider(value=10, description='x', max=30, min=-10), Output()), _dom_classes=('widget-…"
       ]
      },
      "metadata": {},
@@ -186,7 +191,7 @@
        "<function __main__.square(x)>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,18 +202,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-16T09:54:19.500224Z",
-     "start_time": "2020-03-16T09:54:19.479282Z"
+     "end_time": "2020-03-16T10:58:31.027408Z",
+     "start_time": "2020-03-16T10:58:31.006495Z"
     }
    },
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e773d22899184efc90f4ef7069ea625b",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "2500"
+       "interactive(children=(IntSlider(value=50, description='x', step=10), Output()), _dom_classes=('widget-interact…"
       ]
      },
      "metadata": {},
