--- a/corona_model_simulation.ipynb
+++ b/corona_model_simulation.ipynb
@@ -121,18 +121,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-16T11:01:49.077215Z",
-     "start_time": "2020-03-16T11:01:48.918614Z"
+     "end_time": "2020-03-16T11:10:24.040560Z",
+     "start_time": "2020-03-16T11:10:23.886982Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9196bdc859434d0c9d905077a4c253d7",
+       "model_id": "3f0f688796254ebc9cc998b2622da5fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,18 +158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-16T11:01:50.568229Z",
-     "start_time": "2020-03-16T11:01:50.374747Z"
+     "end_time": "2020-03-16T11:13:47.946715Z",
+     "start_time": "2020-03-16T11:13:47.785150Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "109eece749514cc4a6c050b02fd75919",
+       "model_id": "2bcc419ba11342fc9177ed3f814a689f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -179,16 +179,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function corona.sensitiviteit(tijdstappen, init, varnames, f, parameternaam, log_perturbatie=-4, soort='absoluut', **kwargs)>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -197,13 +187,14 @@
     "    init=fixed([6000, 1, 0]), # initiële condities\n",
     "    varnames=fixed(['S','I', 'R']), # namen variabelen\n",
     "    f=fixed(corona.model_afgeleiden), # naam functie afgeleiden\n",
-    "    parameternaam=ToggleButtons(options=['beta', 'gamma']),\n",
-    "    log_perturbatie = IntSlider(value=-4, min=-15, max=-1, step=1, continuous_update=False),\n",
+    "    parameternaam = ToggleButtons(options=['beta', 'gamma']),\n",
+    "    log_perturbatie = IntSlider(value=-4, min=-15, max=-1, step=1, continuous_update=True),\n",
+    "         \n",
     "    soort=ToggleButtons(options=[\n",
     "            'absolute sensitiviteit', 'relatieve sensitiviteit parameter',\n",
     "            'relatieve sensitiviteit variabele','relatieve totale sensitiviteit']),\n",
     "    # vanaf hier: functie specifieke parameters\n",
-    "    beta=fixed(0.0001), gamma=fixed(0.1))"
+    "    beta=fixed(0.0001), gamma=fixed(0.1));"
    ]
   },
   {
