new online tool with modelling and data analysis

--- a/Corona_model_scenarios_JHUdata.ipynb
+++ b/Corona_model_scenarios_JHUdata.ipynb
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "def model_afgeleiden(variables, t, beta, gamma):\n",
+    "def model_der(variables, t, beta, gamma):\n",
     "\n",
     "    S = variables[0]\n",
     "    I = variables[1]\n",
